# libzkp

./: .gitignore  ADVANCED_FEATURES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  README.md  STARK_IMPLEMENTATION.md  benchmark_example.py  bunseki.md  pyproject.toml  sekkei.md  skkei.md  test_benchmark.py  test_improvements.py
.cargo/: audit.toml
.github/workflows/: audit.yml
benches/: zkp_benchmarks.rs
doc/: overview.md  usage.md
docs/: api.md  architecture.md  overview.md
examples/: advanced_features.py  demo.rs  tvc_demo.py
pytests/: test_libzkp.py
src/: advanced.rs  consistency_proof.rs  equality_proof.rs  generic_zkp.rs  improvement_proof.rs  lib.rs  proof.rs  python_api.rs  range_proof.rs  set_membership.rs  threshold_proof.rs  utils.rs  wasm_api.rs
src/advanced/: batch.rs  batch_store.rs  composite.rs  mod.rs
src/backend/: bulletproofs.rs  mod.rs  snark.rs  stark.rs
src/circuits/: generic_circuit.rs  merkle_tree.rs  mod.rs  set_membership.rs
src/proof/: consistency_proof.rs  equality_proof.rs  improvement_proof.rs  mod.rs  range_proof.rs  set_membership.rs  temporal_membership.rs  threshold_proof.rs
src/tvc/: circuit.rs  mod.rs  proof.rs  python_bindings.rs  signal.rs
src/utils/: commitment.rs  composition.rs  encoding.rs  error_handling.rs  limits.rs  mod.rs  performance.rs  proof_helpers.rs  serialization.rs  validation.rs
src/zkp_backends/: bulletproofs_backend.rs  mod.rs
tests/: basic.rs  integration.rs  test_stark.rs
