[package]
name = "libzkp"
version = "0.1.0"
edition = "2021"

[lib]
name = "libzkp"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"] }
bulletproofs = "5.0"
curve25519-dalek = "4.1"
merlin = "3.0"
rand = "0.8"
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-snark = "0.5"
winterfell = "0.10"
sha2 = "0.10"
ark-crypto-primitives = { version = "0.5", features = ["r1cs", "crh"] }
ark-bls12-381 = "0.5"
ark-r1cs-std = "0.5"
ark-ff = "0.5"
rayon = "1.8"
lazy_static = "1.4"