[package]
name = "libzkp"
version = "0.2.0"
edition = "2021"

[lib]
name = "libzkp"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", optional = true, features = ["auto-initialize"] }
bulletproofs = "5.0"
curve25519-dalek = "4.1"
merlin = "3.0"
rand = "0.8"
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-snark = "0.5"
winterfell = "0.10"
winter-utils = "0.10"
sha2 = "0.10"
ark-crypto-primitives = { version = "0.5", features = ["r1cs", "crh"] }
ark-r1cs-std = "0.5"
ark-ff = "0.5"
rayon = { version = "1.8", optional = true }
lazy_static = "1.4"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
fs4 = { version = "0.12", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
# Enable no_cc for wasm32 builds (clear_on_drop is a transitive dep of bulletproofs)
clear_on_drop = { version = "0.2", features = ["no_cc"], optional = true }

[features]
default = ["python", "parallel", "batch-store"]
parallel = ["dep:rayon"]
batch-store = ["dep:serde", "dep:bincode", "dep:fs4"]
# Rust-only library build: `cargo build --no-default-features`
python = ["dep:pyo3"]
# Enable when building the Python extension module (e.g. via maturin).
python-extension = ["python", "pyo3/extension-module"]
# WASM target for browser-side proof generation
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:getrandom", "dep:serde", "dep:serde-wasm-bindgen", "dep:clear_on_drop"]
